// The purpose of the changelog is to provide a concise overview of what was changed.
// The purpose of the changelog format is to make it more organized.
// Versioning follows the x.y.z pattern. Since 0.8.0, the increment has the following meaning:
// z - it's a bugfix release
// y - it's a feature release
// x - it's backwards-incompatible
//
// Version: x.y.z
// Date: Month Day Year of the release
//     Features:
//         First go new features. They usually start with "Add". If they mostly add things, they go to this part.
//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.

----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        
    Fixes:
        - Fix icon rendering.
        - Hide fluid temperature options when not part of a recipe or not accepted by that recipe.
----------------------------------------------------------------------------------------------------------------------
Version: 2.14.0
Date: June 15th 2025
    Features:
        - Module templates can be automatically applied to new recipe rows, on a per-template basis.
    Fixes:
        - Personal equipment names are localized again.
        - Quality prompts from dropdowns now also appear in subsequent selection panels.
        - Fix output temperature selection for recipes that didn't specify the output fluid temperature.
----------------------------------------------------------------------------------------------------------------------
Version: 2.13.0
Date: May 14th 2025
    Features:
        - Add support for exporting all building entities to one blueprint.