@@ -1,5 +1,8 @@
 // The purpose of the changelog is to provide a concise overview of what was changed.
 // The purpose of the changelog format is to make it more organized.
+// If you want to add an entry to the changelog, then please add it to the section without a release date and version.
+// If there is no such section, then copypaste the previous version, remove the info, and put the result below the commented section.
+// Below is the format and the purpose of each field and section:
 // Versioning follows the x.y.z pattern. Since 0.8.0, the increment has the following meaning:
 // z - it's a bugfix release
 // y - it's a feature release
@@ -23,6 +26,7 @@ Date:
     Fixes:
         - Fix icon rendering.
         - Hide fluid temperature options when not part of a recipe or not accepted by that recipe.
+        - Modify text colors for highlighted rows in dark mode to improve readability.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.14.0
 Date: June 15th 2025
